# NexaWallet

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  build_libnexa_for_android.sh  configure.ac
build-aux/m4/: bitcoin_qt.m4  nexa_find_bdb.m4
build-aux/mingw/: config-mingw.bat
contrib/: bitcoin-qt.pro
contrib/devtools/: README.md  btcgdb.py  buildsilence.py  clang-format.py  copyright_header.py  gen-manpages.py  remove-using-namespace-std.py  symbol-check.py  trailing-comment.py  update-translations.py
contrib/electrum/: build_rostrum.py
contrib/gitian-descriptors/: gitian-linux-arm.yml  gitian-linux-x86.yml  gitian-macos-arm-signer.yml  gitian-macos-arm.yml  gitian-macos-x86-signer.yml  gitian-macos-x86.yml  gitian-osx.yml  gitian-win.yml
contrib/macdeploy/: detached-sig-create.sh  macdeployqtplus
depends/: .gitignore  Makefile  README.md  config.site.in  funcs.mk
depends/builders/: darwin.mk  default.mk
depends/hosts/: darwin.mk  default.mk
doc/: README.md  README_windows.txt  REST-interface.md  bu-xpedited-forwarding.md  bu-xthin.md  build-alpine.md  build-freebsd.md  build-macos.md  build-unix-rpm.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  electrum-integration.md  electrum-regtest-setup-ubuntu.md  fork1.md  fuzzing.md  gitian-building.md  gitian-macos-signing.md  headerPath.md  miner.md  multisig.md  negativeRollAndPick.md  nexa-script-machine.md  op_jump.md  op_merkleroot.md  op_parse.md  read-only-inputs.md  release-process.md  script-registers.md  scriptTemplates.md  shared-libraries.md  tailstorm.md  translation_process.md
doc/nexa_whitepaper/: main.tex
doc/release-notes/: 1.1.0.0.md  1.2.0.0.md  1.3.0.0.md  1.3.0.1.md  1.3.0.2.md  1.3.0.3.md  1.4.0.0.md  1.4.0.1.md  1.4.1.0.md  2.0.0.0.md  2.1.0.0.md
doc/rpc/: index.md  mkdocs.yml  requirements.txt
docker/: Dockerfile.ubuntu20-linux64  README.md
docker/current-stable/: README_stable.md  build_and_push.sh
docker/gitlab-ci/: Dockerfile  README_gitlab-ci.md
docker/testing/: Dockerfile.ubuntu20-windows64  README_testing.md  docker-compose.yml
patches/libsecp256k1/: android.diff
qa/: requirements.txt  run-qa-suite.sh
qa/pull-tester/: rpc-tests.py  test_classes.py
qa/rpc-tests/: abandonconflict.py  bip135-grace-failed.py  bip135-grace.py  bip135-threshold.py  bip135basic.py  bip65-cltv.py  bip68-112-113-p2p.py  bip68_sequence.py  bip69.py  bipdersig.py  bitcoin_util_test_data_generate.py  blockchain.py  capd.py  cashlibtest.py  compactblocks_1.py  compactblocks_2.py  ctor.py  decodescript.py  disablewallet.py  expeditedblock.py  extversion.py  fundrawtransaction.py  getblocktemplate_longpoll.py  getblocktemplate_proposals.py  getchaintips.py  getlogcategories.py  getrawtransaction.py  graphene_optimized.py  graphene_stage2.py  graphene_versions.py  grapheneblocks.py  grouptokens.py  hardfork1_activation_blocksizelimit.py  hardfork2_activation_tailstorm.py  headerPath.py  httpbasics.py  interface_zmq.py  invalidateblock.py  invalidblockrequest.py  invalidtxrequest.py  (+70 more)
share/qt/: Info.plist.in  extract_strings_qt.py
src/: .formatted-files  DoubleSpendProof.cpp  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  allowed_args.cpp  allowed_args.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  bandb.cpp  bandb.h  banentry.cpp  banentry.h  base58.cpp  bitnodes.cpp  bitnodes.h  bloom.cpp  bloom.h  cashaddr.cpp  cashaddrenc.cpp  cashaddrenc.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  (+138 more)
src/bench/: Examples.cpp  adaptive_blocksize.cpp  bench.cpp  bench.h  bench_constants.h  bench_nexa.cpp  block_assemble.cpp  bloom.cpp  crypto_ec.cpp  crypto_hash.cpp  mempool_eviction.cpp  murmur_hash.cpp  rollingbloom.cpp  rpc_mempool.cpp  verify_script.cpp
src/blockrelay/: blockrelay_common.cpp  blockrelay_common.h  compactblock.cpp  compactblock.h  graphene.cpp  graphene.h  graphene_set.cpp  graphene_set.h  mempool_sync.cpp  mempool_sync.h  thinblock.cpp  thinblock.h
src/blockstorage/: blockcache.cpp  blockcache.h  blockleveldb.cpp  blockleveldb.h  blockstorage.cpp  blockstorage.h  dbabstract.h  sequential_files.cpp  sequential_files.h
src/capd/: capd.cpp  capd.h  capd_rpc.cpp  capdmsg.cpp
src/cashlib/: CMakeLists.txt  Makefile  cashlib.cpp  cashlib.h  downloadSqliteLiteLib.sh  nexalightcfiles.txt
src/compat/: byteswap.h  cpuid_compat.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: adaptive_blocksize.cpp  adaptive_blocksize.h  consensus.h  grouptokens.cpp  grouptokens.h  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: chacha20.cpp  chacha20.h  common.h  hash160.h  sha256.cpp  sha3.cpp  sha3.h  sha512.h
src/deadlock-detection/: locklocation.cpp  locklocation.h  lockorder.cpp  lockorder.h  threaddeadlock.cpp  threaddeadlock.h
src/electrum/: electrumrpcinfo.cpp  electrumrpcinfo.h  electrumserver.cpp  electrumserver.h  rostrum.cpp  rostrum.h
src/falcon512/: codec.cpp  common.cpp  keygen.cpp  randombytes.cpp  rng.cpp  sign.cpp
src/index/: txindex.cpp  txindex.h
src/libnexa/: CMakeLists.txt  Makefile  downloadBoostLiteLib.sh  downloadSqliteLib.sh  downloadSqliteLiteLib.sh  libnexa.cpp  libnexa.h  libnexa_common.cpp  libnexa_common.h  libnexa_jvm.cpp  libnexa_script_machine.cpp  libnexa_script_machine.h  libsecp256k1-config.h  nexalightcfiles.txt
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  satoshiTransaction.h  satoshiblock.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin_locale.qrc  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  (+110 more)
(+495 files in other folders)
